NXP-32696: cleanup / format