@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2014-2021 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2014-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,27 +15,23 @@
  *
  * Contributors:
  *     mhilaire
- *
  */
-
 package org.nuxeo.ecm.core.cache;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
-import java.io.IOException;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 
-import org.junit.Assert;
 import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -47,7 +43,7 @@ import io.dropwizard.metrics5.MetricName;
 import io.dropwizard.metrics5.SharedMetricRegistries;
 
 @RunWith(FeaturesRunner.class)
-@Features({ CacheFeature.class })
+@Features(CacheFeature.class)
 public class CacheComplianceFixture {
 
     @Inject
@@ -55,7 +51,7 @@ public class CacheComplianceFixture {
     protected Cache defaultCache;
 
     @Test
-    public void getValue() throws IOException {
+    public void getValue() {
         String cachedVal = (String) defaultCache.get(CacheFeature.KEY);
         assertTrue(defaultCache.hasEntry(CacheFeature.KEY));
         assertEquals(CacheFeature.VAL, cachedVal);
@@ -70,20 +66,20 @@ public class CacheComplianceFixture {
 
     @Test
     public void keySet() {
-        Assert.assertNotNull(defaultCache.get(CacheFeature.KEY));
+        assertNotNull(defaultCache.get(CacheFeature.KEY));
         defaultCache.put("key2", "val2");
         Set<String> keys = defaultCache.keySet();
         assertTrue(keys.contains("key2"));
     }
 
     @Test
-    public void keyNotExist() throws IOException {
+    public void keyNotExist() {
         assertNull(defaultCache.get("key-not-exist"));
         assertFalse(defaultCache.hasEntry("key-not-exist"));
     }
 
     @Test
-    public void putUpdateGet() throws IOException {
+    public void putUpdateGet() {
         String val2 = "val2";
         defaultCache.put(CacheFeature.KEY, val2);
         val2 = (String) defaultCache.get(CacheFeature.KEY);
@@ -91,18 +87,14 @@ public class CacheComplianceFixture {
     }
 
     @Test
-    public void putNullKey() throws IOException {
-        try {
-            defaultCache.put(null, "val-null");
-            fail("Should raise exception !");
-        } catch (Exception e) {
-            assertEquals("Can't put a null key for the cache 'default-test-cache'!", e.getMessage());
-        }
+    public void putNullKey() {
+        var e = assertThrows(IllegalArgumentException.class, () -> defaultCache.put(null, "val-null"));
+        assertEquals("Can't put a null key for the cache 'default-test-cache'!", e.getMessage());
     }
 
     @Test
     @Ignore
-    public void ttlExpire() throws InterruptedException, IOException {
+    public void ttlExpire() throws InterruptedException {
         // Default config test set the TTL to 1mn, so wait 1mn and 1s
         Thread.sleep(61000);
         String expiredVal = (String) defaultCache.get(CacheFeature.KEY);
@@ -110,17 +102,17 @@ public class CacheComplianceFixture {
     }
 
     @Test
-    public void invalidateKey() throws IOException {
-        Assert.assertNotNull(defaultCache.get(CacheFeature.KEY));
+    public void invalidateKey() {
+        assertNotNull(defaultCache.get(CacheFeature.KEY));
         defaultCache.invalidate(CacheFeature.KEY);
         assertNull(defaultCache.get(CacheFeature.KEY));
     }
 
     @Test
     public void invalidateAll() {
-        Assert.assertNotNull(defaultCache.get(CacheFeature.KEY));
+        assertNotNull(defaultCache.get(CacheFeature.KEY));
         defaultCache.put("key2", "val2");
-        Assert.assertNotNull(defaultCache.get("key2"));
+        assertNotNull(defaultCache.get("key2"));
         defaultCache.invalidateAll();
         assertNull(defaultCache.get(CacheFeature.KEY));
         assertNull(defaultCache.get("key2"));
@@ -131,7 +123,7 @@ public class CacheComplianceFixture {
         List<MetricName> expected = Stream.of("nuxeo.cache.read", "nuxeo.cache.hit", "nuxeo.cache.hit.ratio",
                 "nuxeo.cache.invalidation", "nuxeo.cache.size")
                                           .map(name -> MetricName.build(name).tagged("cache", "default-test-cache"))
-                                          .collect(Collectors.toList());
+                                          .toList();
         assertTrue(SharedMetricRegistries.getOrCreate(MetricsService.class.getName()).getNames().containsAll(expected));
     }
 }
