@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2010 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2010-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,13 +15,9 @@
  * Contributors:
  *     Nuxeo - initial API and implementation
  */
-
-/**
- * @author <a href="mailto:troger@nuxeo.com">Thomas Roger</a>
- */
-
 package org.nuxeo.ecm.platform.shibboleth.service;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
@@ -40,6 +36,9 @@ import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
 
+/**
+ * @author <a href="mailto:troger@nuxeo.com">Thomas Roger</a>
+ */
 @RunWith(FeaturesRunner.class)
 @Features(CoreFeature.class)
 @RepositoryConfig(init = DefaultRepositoryInit.class, cleanup = Granularity.METHOD)
@@ -60,7 +59,7 @@ public class TestShibbolethAuthenticationService {
         String redirectURL = "https://test.nuxeo.org";
         String loginURL = service.getLoginURL(redirectURL);
 
-        String encodedRedirectUrl = URLEncoder.encode(redirectURL, "UTF-8");
+        String encodedRedirectUrl = URLEncoder.encode(redirectURL, UTF_8);
         assertEquals("https://host/Shibboleth.sso/WAYF?target=" + encodedRedirectUrl, loginURL);
     }
 
@@ -69,7 +68,7 @@ public class TestShibbolethAuthenticationService {
         String redirectURL = "https://test.nuxeo.org";
         String logoutURL = service.getLogoutURL(redirectURL);
 
-        String encodedRedirectUrl = URLEncoder.encode(redirectURL, "UTF-8");
+        String encodedRedirectUrl = URLEncoder.encode(redirectURL, UTF_8);
         assertEquals("https://host/Shibboleth.sso/Logout?return=" + encodedRedirectUrl, logoutURL);
     }
 
@@ -91,7 +90,7 @@ public class TestShibbolethAuthenticationService {
     }
 
     @Test
-    public void testUserMetada() {
+    public void testUserMetadata() {
         MockHttpServletRequest request = new MockHttpServletRequest();
         request.setHeader("uid", "FrÃ©dÃ©ric");
         request.setHeader("uid1", "value1");
