@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2018 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2018-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,8 +22,8 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
 import java.io.Serializable;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import jakarta.inject.Inject;
@@ -175,7 +175,7 @@ public class TestSuggestUserEntries {
             user.setPropertyValue("user:lastName", "Smith");
             user.setPropertyValue("user:email", "user" + i + "@example.com");
             if ((i % 2) == 0) { // one in two belongs to devs
-                user.setPropertyValue("user:groups", (Serializable) Arrays.asList("devs"));
+                user.setPropertyValue("user:groups", (Serializable) List.of("devs"));
             }
             userManager.createUser(user);
         }
@@ -281,30 +281,30 @@ public class TestSuggestUserEntries {
         // create group 'a'
         DocumentModel a = userManager.getBareGroupModel();
         a.setPropertyValue("group:groupname", "a");
-        a.setPropertyValue("group:subGroups", (Serializable) Arrays.asList("b", "c"));
+        a.setPropertyValue("group:subGroups", (Serializable) List.of("b", "c"));
 
         userManager.createGroup(a);
 
         // create group 'b'
         DocumentModel b = userManager.getBareGroupModel();
         b.setPropertyValue("group:groupname", "b");
-        b.setPropertyValue("group:parentGroups", (Serializable) Arrays.asList("a"));
-        b.setPropertyValue("group:subGroups", (Serializable) Arrays.asList("c", "a"));
+        b.setPropertyValue("group:parentGroups", (Serializable) List.of("a"));
+        b.setPropertyValue("group:subGroups", (Serializable) List.of("c", "a"));
 
         userManager.createGroup(b);
 
         // create group 'c'
         DocumentModel c = userManager.getBareGroupModel();
         c.setPropertyValue("group:groupname", "c");
-        c.setPropertyValue("group:parentGroups", (Serializable) Arrays.asList("b", "a"));
-        c.setPropertyValue("group:subGroups", (Serializable) Arrays.asList("d"));
+        c.setPropertyValue("group:parentGroups", (Serializable) List.of("b", "a"));
+        c.setPropertyValue("group:subGroups", (Serializable) List.of("d"));
 
         userManager.createGroup(c);
 
         // create group 'd'
         DocumentModel d = userManager.getBareGroupModel();
         d.setPropertyValue("group:groupname", "d");
-        d.setPropertyValue("group:parentGroups", (Serializable) Arrays.asList("c"));
+        d.setPropertyValue("group:parentGroups", (Serializable) List.of("c"));
 
         userManager.createGroup(d);
 
@@ -316,13 +316,13 @@ public class TestSuggestUserEntries {
             user.setPropertyValue("user:lastName", "Smith");
             user.setPropertyValue("user:email", "user" + i + "@example.com");
             if (i % 4 == 0) {
-                user.setPropertyValue("user:groups", (Serializable) Arrays.asList("a"));
+                user.setPropertyValue("user:groups", (Serializable) List.of("a"));
             } else if (i % 4 == 1) {
-                user.setPropertyValue("user:groups", (Serializable) Arrays.asList("b"));
+                user.setPropertyValue("user:groups", (Serializable) List.of("b"));
             } else if (i % 4 == 2) {
-                user.setPropertyValue("user:groups", (Serializable) Arrays.asList("c"));
+                user.setPropertyValue("user:groups", (Serializable) List.of("c"));
             } else {
-                user.setPropertyValue("user:groups", (Serializable) Arrays.asList("d"));
+                user.setPropertyValue("user:groups", (Serializable) List.of("d"));
             }
             userManager.createUser(user);
         }
