@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2016 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2016-2024 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,9 +20,9 @@ package org.nuxeo.ecm.automation.core.test;
 
 import static jakarta.servlet.http.HttpServletResponse.SC_CONFLICT;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
+import static org.junit.Assert.assertThrows;
 
-import java.util.Collections;
+import java.util.Map;
 
 import jakarta.inject.Inject;
 
@@ -54,13 +54,13 @@ import org.nuxeo.runtime.test.runner.FeaturesRunner;
 public class UserInviteTest {
 
     @Inject
-    AutomationService service;
+    protected AutomationService service;
 
     @Inject
-    CoreSession session;
+    protected CoreSession session;
 
     @Inject
-    UserManager um;
+    protected UserManager um;
 
     protected OperationContext ctx;
 
@@ -83,26 +83,22 @@ public class UserInviteTest {
         NuxeoPrincipal user = new NuxeoPrincipalImpl("user");
         ctx.setInput(user);
 
-        String invitationId = (String) service.run(ctx, UserInvite.ID, Collections.emptyMap());
+        String invitationId = (String) service.run(ctx, UserInvite.ID, Map.of());
 
         DocumentModel doc = session.getDocument(new IdRef(invitationId));
         assertEquals(user.getName(), doc.getPropertyValue("userinfo:login"));
     }
 
     @Test
-    public void testInviteExistingUserException() throws Exception {
+    public void testInviteExistingUserException() {
         // Given a user
         NuxeoPrincipal testUser = new NuxeoPrincipalImpl("testUser");
         um.createUser(testUser.getModel());
 
         // When trying to invite the existing user
         ctx.setInput(testUser);
-        try {
-            service.run(ctx, UserInvite.ID, Collections.emptyMap());
-            fail("User.Invite should have failed with an existent user");
-        } catch (UserAlreadyExistsException e) {
-            // Should return the UserAlreadyExists Exception
-            assertEquals(SC_CONFLICT, e.getStatusCode());
-        }
+        var e = assertThrows(UserAlreadyExistsException.class, () -> service.run(ctx, UserInvite.ID, Map.of()));
+        // Should return the UserAlreadyExists Exception
+        assertEquals(SC_CONFLICT, e.getStatusCode());
     }
 }
